--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
         .cta{
             color: #00B0F0;
+            font-family: 'Poppins';
         }
 
         a{
-            font-family: 'Poppins';
             font-weight: bold;
-            color: #000;
+            color: #00B0F0;
             text-decoration: none;
         }
 
@@ -163,6 +163,10 @@
             margin: 30px 0;
         }
 
+        footer a{
+            color: #000;
+        }
+
         footer span{
             display: inline-block;
             margin: 0 10px;
@@ -215,27 +219,29 @@
         <div id="hero">
             <div class="hero-option patient-purple">
                 <h2>Are you someone with an Eating Disorder and Autism?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam eos sunt eum libero, alias natus asperiores voluptatum perferendis corporis et maiores, voluptatibus ipsam, voluptas aspernatur quod nostrum reprehenderit minus nesciunt! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas quibusdam consectetur dolor. Magnam consectetur magni neque adipisci nihil vero nostrum reprehenderit facere nulla, et quae ipsa deleniti dolorum quis hic.</p>
+                <p>Welcome to the PEACE Community! We want you to feel seen and for your autism to be acknowledged, understood and supported in eating disorder treatment. We hope this website provides tools to enable this. Our team have team have created some resources and psychoeducation to support you and those supporting you.</p>
             </div>
             <div class="hero-option carer-purple">
                 <h2>Are you a Carer?</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum voluptatum vel quae magni praesentium doloribus et itaque possimus. Est libero odit tempore nesciunt reprehenderit, beatae tenetur dolores consectetur quaerat laborum.</p>
+                <p>Welcome to the PEACE Community! At PEACE, we recognise the amazing job you are doing as a carer to support your loved one on their recovery journey. From speaking to other carers, we know this is not always easy. We want to ‘support the supporters’ by providing you with a Carers’ Community, a helping hand and some practical resources.</p>
             </div>
             <div class="hero-option clinician-purple">
                 <h2>Are you a Clinician</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, modi reprehenderit. Natus facilis ipsam aspernatur magnam quisquam eaque voluptatibus optio similique incidunt iure, aliquam dolore error tempora, totam voluptas? Veniam.</p>
+                <p>Welcome to the PEACE Community! We acknowledge that there are currently no treatment guidelines for supporting autistic people with eating disorders. As a result of this, clinicians we have spoken to report lacking in confidence and knowledge. We want to make suggestions and adaptations which can be used in treatment to increase your understanding and your confidence.</p>
             </div>
         </div>
     </header>    
     <section>
         <h2>What is PEACE?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, ad? Sunt unde id ut saepe reprehenderit doloribus. Inventore asperiores tempora maxime! Dolor, officiis dicta. Incidunt, omnis. Ipsa quaerat dolor illum!</p>
+        <p>PEACE is a Pathway for Eating disorders and Autism developed from Clinical Experience. Our research suggests that around 35% of people experiencing an eating disorder may be autistic, or present with high levels of autistic traits. We hope this pathway will support autistic people suffering with an eating disorder, their loved ones and their clinicians.</p>
     </section>
     <section>
         <h2>Help and Support</h2>
-        <p>Need some advice? Want to find a PEACE center near you? Want to get more involved?</p>
-        <img class="contact-icon" src="images/envelope.png" alt="Envelope">
-        <p>Reach out to our team</p>
+        <p>You are now part of the PEACE Community and we want to hear from YOU! Send us a message with your feedback or questions!</p>
+        <div>
+            <img class="contact-icon" src="images/envelope.png" alt="Envelope">
+        </div>       
+        
         <a class="cta" href="mailto:team@peacepathway.org">team@peacepathway.org</a>
         <div class="social-links">
             <a href=""><img src="images/facebook.png" alt="Facebook"></a>
@@ -245,16 +251,13 @@
     </section>
     <section>
         <h2>Are you a Researcher?</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nesciunt vel deserunt blanditiis dolorum eligendi dolor rem ducimus laborum voluptate. Officiis, consequuntur numquam impedit veniam eveniet natus facilis obcaecati at?</p>
+        <p>Welcome to the PEACE Community! We are always welcoming fellow researchers as we need more research to support this under-researched group. Check out the PEACE Lab’s research <a href="#">here</a>. Got a specific research question or want to get involved? Send us a message <a href="mailto:team@peacepathway.org">here</a>.</p>
     </section>
     <section>
         <h2>Resources</h2>
-        <p>
-            PEACE is the first pathway developed purely to help those affected by Eating Disorders and Autism. <br>
-            Check out the latest developments in our research.
-        </p>
+        <p>The PEACE Team made up from a group of wonderful clinicians and researchers have worked hard to create materials to support you! Check them out below, we hope you find them useful.</p>
         <div class="resource-links">
-            <a class="resource-link patient-purple" href="">For those with ASD & ED</a>
+            <a class="resource-link patient-purple" href="">For those with ASC & ED</a>
             <a class="resource-link carer-purple" href="">For Carers</a>
             <a class="resource-link clinician-purple" href="">For Clinicians</a>
         </div>        
