Added question mark

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <p>Welcome to the PEACE Community! At PEACE, we recognise the amazing job you are doing as a carer to support your loved one on their recovery journey. From speaking to other carers, we know this is not always easy. We want to ‘support the supporters’ by providing you with a Carers’ Community, a helping hand and some practical resources.</p>
             </div>
             <div class="hero-option clinician-purple">
-                <h2>Are you a Clinician</h2>
+                <h2>Are you a Clinician?</h2>
                 <p>Welcome to the PEACE Community! We acknowledge that there are currently no treatment guidelines for supporting autistic people with eating disorders. As a result of this, clinicians we have spoken to report lacking in confidence and knowledge. We want to make suggestions and adaptations which can be used in treatment to increase your understanding and your confidence.</p>
             </div>
         </div>
@@ -268,7 +268,7 @@
         </div>
         <p>
             <span>PEACE Pathway 2020 All rights Reserved</span>
-            <span>Privacy Policy</span>
+            <!-- <span>Privacy Policy</span> -->
             <span>Website by <a href="https://www.totemise.com">TOTEM</a></span>
         </p>
         <div class="social-links">
