--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
         
         <a class="cta" href="mailto:team@peacepathway.org">team@peacepathway.org</a>
         <div class="social-links">
-            <a href=""><img src="images/facebook.png" alt="Facebook"></a>
-            <a href=""><img src="images/twitter.png" alt="Twitter"></a>
-            <a href=""><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/groups/624008845049213/"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/peace_pathway"><img src="images/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/peace_pathway/"><img src="images/instagram.png" alt="Instagram"></a>
         </div>
     </section>
     <section>
@@ -257,9 +257,9 @@
         <h2>Resources</h2>
         <p>The PEACE Team made up from a group of wonderful clinicians and researchers have worked hard to create materials to support you! Check them out below, we hope you find them useful.</p>
         <div class="resource-links">
-            <a class="resource-link patient-purple" href="">For those with ASC & ED</a>
-            <a class="resource-link carer-purple" href="">For Carers</a>
-            <a class="resource-link clinician-purple" href="">For Clinicians</a>
+            <a class="resource-link patient-purple" href="https://drive.google.com/drive/folders/1t9AitZaEc-p0H3v50BYWFlvlXin2KyrK?usp=sharing">For those with ASC & ED</a>
+            <a class="resource-link carer-purple" href="https://drive.google.com/drive/folders/1KonWXASlH_He-vwGFYU-KynC4H0zgDrc?usp=sharing">For Carers</a>
+            <a class="resource-link clinician-purple" href="https://drive.google.com/drive/folders/1Qzy_aJ4gdRbwroZQ72cdU17IBZcCeMO8?usp=sharing">For Clinicians</a>
         </div>        
     </section>
     <footer>
@@ -272,9 +272,9 @@
             <span>Website by <a href="https://www.totemise.com">TOTEM</a></span>
         </p>
         <div class="social-links">
-            <a href=""><img src="images/facebook.png" alt="Facebook"></a>
-            <a href=""><img src="images/twitter.png" alt="Twitter"></a>
-            <a href=""><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/groups/624008845049213/"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/peace_pathway"><img src="images/twitter.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/peace_pathway/"><img src="images/instagram.png" alt="Instagram"></a>
         </div>
         <div class="related-orgs">
             <img src="images/KCL_logo.png" alt="Kings College London">
