commented out resources for now

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <h2>Are you a Researcher?</h2>
         <p>Welcome to the PEACE Community! We are always welcoming fellow researchers as we need more research to support this under-researched group. Check out the PEACE Lab’s research <a href="#">here</a>. Got a specific research question or want to get involved? Send us a message <a href="mailto:team@peacepathway.org">here</a>.</p>
     </section>
-    <section>
+    <!-- <section>
         <h2>Resources</h2>
         <p>The PEACE Team made up from a group of wonderful clinicians and researchers have worked hard to create materials to support you! Check them out below, we hope you find them useful.</p>
         <div class="resource-links">
@@ -261,7 +261,7 @@
             <a class="resource-link carer-purple" href="https://drive.google.com/drive/folders/1KonWXASlH_He-vwGFYU-KynC4H0zgDrc?usp=sharing">For Carers</a>
             <a class="resource-link clinician-purple" href="https://drive.google.com/drive/folders/1Qzy_aJ4gdRbwroZQ72cdU17IBZcCeMO8?usp=sharing">For Clinicians</a>
         </div>        
-    </section>
+    </section> -->
     <footer>
         <div>
             <img class="peace-logo" src="images/PEACE_logo.svg" alt="PEACE">
